[package]
name = "back_end"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["http2", "ws", "multipart", "macros"] }
env_logger = "0.11.1"
error-stack = { version = "0.4.1", features = [
    "anyhow",
    "eyre",
    "spantrace",
    "hooks",
] }
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.196", features = ["derive", "serde_derive", "rc"] }
serde_json = { version = "1.0.113", features = [
    "raw_value",
    "indexmap",
    "preserve_order",
    "unbounded_depth",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
dotenv = "0.15.0"
lazy_static = "1.4.0"
